1、修改pom项目包名； 2、增加主播字段（video_show 音频个人秀展示）

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<packaging>war</packaging>
 	<name>likechat_server_service</name>
-	<groupId>com.tiger.flow</groupId>
+	<groupId>com.fun.likechat</groupId>
 	<artifactId>likechat_server_service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
