--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
 
 	<context-param>
 		<param-name>webAppRootKey</param-name>
-		<param-value>webapp.root3</param-value>
+		<param-value>likechat.server</param-value>
 	</context-param>
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
